# zrpc-rs

./: .gitignore  Cargo.toml  README.md
examples/: zrpc_client.rs  zrpc_server.rs
examples/cfg/: client_conf.yaml  conf.yaml
examples/pb/: user.rs
src/: lib.rs
src/client/: mod.rs
src/common/: mod.rs
src/discovery/: mod.rs
src/error/: mod.rs
src/etcd/: discovery.rs  mod.rs  register.rs
src/middleware/: mod.rs
src/middleware/sre_breaker/: mod.rs
src/register/: mod.rs
src/server/: mod.rs
