[package]
name = "zrpc"
version = "0.1.0"
edition = "2021"
authors = ["Zzaniu <<zzaniu@126.com>>"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
etcd-client = "0.14.0"
pin-project-lite = "0.2.16"
tower = { version = "0.4.13", features = ["discover", "timeout"] }
uuid = { version = "1.11.0", features = ["v4"] }
anyhow = "1.0.95"
serde_yaml = "0.9.34"
thiserror = "2.0.10"
tool = { git = "https://github.com/Zzaniu/tool-rs", features = ["sre_breaker"], tag = "0.1.7" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.39"
dashmap = "6.1.0"

[dev-dependencies]
prost = "0.13.4"


[[example]]
name = "zrpc_server"

[[example]]
name = "zrpc_client"

